fix(animations): adjust hue-rotate animation duration for better visual effect fix(Logo): change loading animation class from pulse to hue-rotate fix(sidebar): update icon-area opacity for improved visibility refactor(index): comment out ComingSoon component for cleaner initial render

--- a/assets/stylesheets/utilities/_animations.scss
+++ b/assets/stylesheets/utilities/_animations.scss
@@ -862,7 +862,7 @@ $default_hover_opacity_value: 0.6;
     @include animate-grayscale(1s);
   }
   &.hue-rotate {
-    @include animate-hue-rotate(1s);
+    @include animate-hue-rotate(10s);
   }
   &.invert {
     @include animate-invert(1s);
